clang/test/BSC/Positive/Coroutine/AwaitExpr/await-expr-nest-await/await-expr-nest-await.cbs
// RUN: %clang %s -o %test.output
// RUN: %test.output
// RUN: %clang -rewrite-bsc %S/../../../../../../lib/Headers/bsc_include/future.hbs -o %T/future.h
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang %t-rw.c -o %t-rw.output
// RUN: %t-rw.output
// expected-no-diagnostics

#include "future.hbs"
#include <stdlib.h>

async int read(int a) {
  return 0;
}

async int f(int start) {
  int result = await read(await read(start));
  return result;
}

int main() {
  trait Future<int>* this = f(1);
  this->poll();
  this->free();
  return 0;
}