clang/test/BSC/Negative/Coroutine/Other/Extern/Extern.cbs
// RUN: %clang %s %S/Inputs/extern-file.cbs -o %test.output
// RUN: %test.output
// RUN: %clang -rewrite-bsc %S/../../../../../../lib/Headers/bsc_include/future.hbs -o %T/future.h
// RUN: %clang -rewrite-bsc %s -o %t-rw.c
// RUN: %clang -rewrite-bsc %S/Inputs/extern-file.cbs -o %T/extern-file.cbs.tmp-rw.c
// RUN: %clang %T/extern-file.cbs.tmp-rw.c %t-rw.c -o %T/rw.output
// RUN: %T/rw.output

#include "future.hbs"

extern async int f(int n);

int main() {
  trait Future<int>* this = f(5);
  this->poll();
  this->free();
  return 0;
}